# dashboard-fg

./: .firebaserc  .gitignore  Makefile  README.md  dashboard-fg.code-workspace  docker-compose.yml
projeto-api/: .env.example  Dockerfile  Dockerfile.etl  README.md  alembic.ini  cloudbuild.etl.free.yaml  cloudbuild.etl.yaml  cloudbuild.free.yaml  cloudbuild.yaml  pyproject.toml
projeto-api/alembic/: env.py
projeto-api/alembic/versions/: 20260417_1200_initial_schema.py  20260417_1430_tabelas_calculadas.py
projeto-api/app/: __init__.py  auth.py  config.py  db.py  deps.py  logging_config.py  main.py
projeto-api/app/etl/: __init__.py  __main__.py  collector.py  pipeline.py
projeto-api/app/models/: __init__.py  assunto.py  atividade.py  feriado.py  grupo.py  parametro.py  produtividade_calc.py
projeto-api/app/routers/: admin.py  aproveitamento.py  auth.py  dashboard.py  health.py  metrics.py  produtividade.py  ranking.py
projeto-api/app/schemas/: __init__.py  aproveitamento.py  produtividade.py  ranking.py  user.py
projeto-api/app/services/: __init__.py  aproveitamento.py  datajuri_client.py  dias_uteis.py  distribuicao.py  normalize.py  produtividade.py  ranking.py
projeto-api/scripts/: export_sheets_to_json.py  init-db.sql  seed_from_apps_script.py
projeto-api/tests/: conftest.py
projeto-api/tests/integration/: paridade_helpers.py  test_paridade.py
projeto-api/tests/unit/: test_main_app.py
projeto-api/tests/unit/fixtures/: atividades_sample.py
projeto-api/tests/unit/services/: test_aproveitamento.py  test_datajuri_client.py  test_dias_uteis.py  (+6 more)
(+51 files in other folders)
