[project]
name = "dashboard-fg-api"
version = "0.1.0"
description = "Backend FastAPI do Dashboard de Produtividade da Furtado Guerini Advocacia"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "sqlalchemy[asyncio]>=2.0.36",
  "asyncpg>=0.30.0",
  "alembic>=1.14.0",
  "psycopg2-binary>=2.9.10",
  "httpx>=0.27.2",
  "tenacity>=9.0.0",
  "authlib>=1.3.2",
  "itsdangerous>=2.2.0",
  "starlette>=0.41.0",
  "structlog>=24.4.0",
  "prometheus-client>=0.21.0",
  "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.8.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=6.0.0",
  "httpx>=0.27.2",
  "pyright>=1.1.385",
]
paridade = [
  "gspread>=6.1.4",
  "google-auth>=2.35.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
include = ["app", "tests"]
exclude = ["**/__pycache__", ".venv"]
typeCheckingMode = "strict"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
  "ignore::DeprecationWarning",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
